# jxl-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
crates/jxl/: Cargo.toml
crates/jxl-cli/: Cargo.toml
crates/jxl-cli/src/: decode.rs  main.rs
crates/jxl-cli/tests/: decode.rs
crates/jxl-codec/: Cargo.toml
crates/jxl-codec/src/: bitstream.rs  codestream.rs  container.rs  decode.rs  entropy.rs  error.rs  frame.rs  frame_data.rs  icc.rs  lib.rs  metadata.rs  modular.rs  transform.rs  vardct.rs
crates/jxl-codec/tests/: fixtures.rs
crates/jxl/src/: lib.rs
docs/: vardct-lossy-roadmap.md
tools/reference-trace/: README.md  build.sh  jxl_vardct_trace.cc
