[workspace]
members = [
    "crates/jxl-codec",
    "crates/jxl",
    "crates/jxl-cli",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "BSD-3-Clause"
repository = "https://github.com/robchristie/jxl-rs"

[workspace.dependencies]
clap = { version = "4.5.50", features = ["derive"] }
half = "2.7.1"
rayon = "1.11.0"
thiserror = "2.0.17"
